# ChatGPT-Discord-Bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: chatgpt.py  memory.py  utils.py
