[tool.poetry]
name = "chatgpt-discord-bot"
version = "0.1.0"
description = ""
authors = ["Henry Lee <henry410213028@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "0.27.0"
requests = "2.28.2"
"discord.py" = "2.1.1"
python-dotenv = "0.21.1"
Flask = "2.2.3"

[tool.poetry.dev-dependencies]
commitizen = "^2.42.1"
pytest = "^7.2.2"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
